# brizzo

backend/: Cargo.toml
backend/src/: configuration.rs  main.rs
backend/src/messages/: create.rs  mod.rs  read.rs  update.rs  xid.rs
backend/src/store/: error.rs  mod.rs
frontend/create/: index.html  script.js  style.css
frontend/show/: index.html  script.js  style.css
