[package]
name = "brizzo"
version = "0.1.0"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2018"

[dependencies]
actix-http = "2.2.0"
actix-web = "3.3.2"
actix-session = "0.4.1"
env_logger = "0.8.3"
log = "0.4"
r2d2_redis = "0.14"
rand = "0.8.3"
rmp-serde = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
toml = "0.5.8"

[dependencies.maze]
git = "https://github.com/moses-palmer/labyru"
default-features = false
features = ["serde"]
rev = "v3.0.0"

[dependencies.maze-tools]
git = "https://github.com/moses-palmer/labyru"
rev = "v3.0.0"
